--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             </div>
 
             <div id="controls">
+                <a href="help.html">Help</a>
                 <input id="speed" min="0" max="10" value="5" step="0.001" type="range">
                 <button id="go">Go</button>
                 <pre id="debug"></pre>
